<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue"
        tools:context=".Activity.RegisterActivity">

        <TextView
            android:id="@+id/teks1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="102dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/selamat_datang"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teks2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/teks1"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/silahkan_masuk_dan_selamat_membaca"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/linear"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_shape_login"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="20dp"
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <View
                android:id="@+id/v_saparator"
                android:background="#E8E9E8"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <EditText
                android:id="@+id/et_email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="20dp"
                android:backgroundTint="#FFF"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
            <View
                android:id="@+id/v_saparator2"
                android:background="#E8E9E8"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <EditText
                android:id="@+id/et_password"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="20dp"
                android:backgroundTint="#FFF"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bt_daftar2"
            android:layout_width="100dp"
            android:layout_height="54dp"
            android:layout_below="@+id/linear"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_shape_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorBlue"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_dengan"
            android:textSize="18sp"
            android:id="@+id/text3"
            android:fontFamily="@font/roboto_italic"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/bt_daftar2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/text3"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_social_media"/>

        </LinearLayout>


    </RelativeLayout>
